[iPad] Videos on nhl.com can't be scrubbed when loaded with desktop UA. https://bugs.webkit.org/show_bug.cgi?id=207058

Reviewed by Darin Adler.

The video controls on nhl.com listen for mousedown/mousemove/mouseup events, not
touchstart/touchmove/touchend events. Until nhl.com can update their site to support touch
events, add them to the quirks list for simplated mouse events.

Drive-by fix: There's no need to re-parse the entire URL and walk through all the cases
every time shouldDispatchSimulatedMouseEvents() is called. Save the results of the initial
pass so that subsequent checks are just a simple bool check.

* page/Quirks.cpp:
(WebCore::Quirks::shouldDispatchSimulatedMouseEvents const):


Canonical link: https://commits.webkit.org/220144@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255592 268f45cc-cd09-0410-ab3c-d52691b4dbfc